@@ -9,6 +9,8 @@ netcfg (0.40) UNRELEASED; urgency=low
       this time.
   * Andre Dahlqvist
     - Initial Swedish translation (sv.po).
+  * Matt Kraai
+    - Do not overwrite /etc/resolv.conf if using DHCP.
 
  -- Bart Cornelis <cobaco@linux.be>  Tue, 30 Dec 2003 21:46:30 +0100
 
